--- a/portafolio/styles/Home.module.css
+++ b/portafolio/styles/Home.module.css
@@ -14,6 +14,12 @@
   color: #755CDE;
 }
 
+.likedin:hover {
+
+  color: rgb(239, 175, 13);
+
+}
+
 .nav button:nth-of-type(2), .about article button, .footer div button{
   color: white;
   height: 3rem;
@@ -40,6 +46,14 @@
 
 .hero p{
   margin-top: 1.5rem;
+}
+
+.logo {
+  padding-right: 15px;
+}
+
+.call {
+  color: #5034c0;
 }
 
 .hero p, .about article p, .footer div article p{
