--- a/portafolio/styles/Home.module.css
+++ b/portafolio/styles/Home.module.css
@@ -1,10 +1,10 @@
-.container {
+/* .container {
   margin: 0 auto;
   max-width: 1110px;
   padding: 2.1rem 0 4rem 0;
-}
+} */
 /* Se acomoda el nav para separar la imagen del botón free consultation*/
-.nav {
+/* .nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -206,4 +206,4 @@
 
 .footer nav {
   margin-top: 3.5rem;
-}
+} */
